# data-science

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  READ_ME  config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Core/: documentation.py  main.py
Core/Data Analysis/: stats.py
Core/Data Engineering/: data_cleaning.py  data_transformation.py
Core/ML Modelling/: product_optimization.py
Core/_Global/: connect.py  constants.py  helpers.py
Core/_Libraries/: connection.py  model.py  plot.py  standard.py
Projects/: ML.ipynb  template.ipynb
SQL/: bookings.sql  cancellations.sql  orders.sql  products.sql
conf/: config.yaml  databases.yaml  logging.yaml
config/: apis.yaml  databases.yaml
core/: METHODS.md  __init__.py  config.py  prelude.py
core/analytics/: __init__.py  basket.py  bayes.py  causal.py  choice.py  curves.py  distance.py  drivers.py  experiment.py  graph.py  regression.py  risk.py  stats.py
core/api/: __init__.py  client.py  graphql.py
core/db/: __init__.py  engine.py  query.py
core/decision/: __init__.py  bandits.py  capacity.py  game.py  inventory.py  optimize.py  scenario.py  simulate.py
core/features/: __init__.py  clean.py  geo.py  period.py  temporal.py  text.py  transform.py  validate.py
core/forecasting/: __init__.py  backtest.py  diagnostics.py  hierarchy.py  models.py
core/io/: __init__.py  cache.py  catalog.py  readers.py  writers.py
core/kpi/: __init__.py  _util.py  behaviour.py  financial.py  profit.py
core/modeling/: __init__.py  anomaly.py  checks.py  compare.py  ensemble.py  evaluate.py  frames.py  imbalance.py  interpret.py  kpi.py  monitor.py  persist.py  preprocess.py  recommend.py  registry.py  segment.py  split.py  (+3 more)
notebooks/: 01_cleaning_and_eda.py  01_example.py  02_features_kpis_periods.py  03_churn_modeling.py  04_segmentation_and_experiments.py  05_forecasting.py  06_scale_lazy_duckdb.py  07_statistical_inference.py  08_regression_inference.py  09_causal_inference.py  10_bayesian_methods.py  11_timeseries_diagnostics.py  12_decision_and_pricing.py  13_demand_elasticity_wtp.py  14_pricing_optimization_curves.py  15_market_supply_demand_ops.py  16_monte_carlo_risk.py  17_optimization_game_theory.py  18_hierarchical_forecasting.py  19_recommendation_basket_graph.py  20_churn_survival_analysis.py  21_model_governance_explainability.py  22_operational_ml_monitoring.py  23_conjoint_maxdiff.py  _template.py
scripts/: bootstrap.py  make_sample_data.py
tests/: conftest.py  test_analytics.py  test_audit_additions.py  test_catalog.py  test_checks_interpret.py  test_choice.py  test_curves_drivers.py  test_decision.py  test_features.py  test_forecasting.py  test_graph_basket.py  test_hierarchy.py  test_import.py  test_kpi.py  test_modeling.py  test_monitor.py  test_notebooks.py  test_operational.py  test_operations.py  test_pricing.py  test_simulate_risk.py  test_stats.py  test_survival_recommend.py  test_utils.py  test_viz.py
(+41 files in other folders)
